code/ingress/prometheus-ingress-local.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: prometheus-ingress
spec:
  rules:
    - host: prometheus.piezo.ac.uk
      http:
        paths:
          - backend:
              serviceName: prometheus-operator-prometheus
              servicePort: web
            path: /prometheus/
          - backend:
              serviceName: prometheus-operator-grafana
              servicePort: service
            path: /
